add: DBContext, Migration

--- a/Blog.web/appsettings.json
+++ b/Blog.web/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "BlogDbConnectionString": "Server=SCOMP;Database=BlogDb;Trusted_Connection=True;TrustServerCertificate=Yes"
+  }
 }
